<resources>
    <string name="nama">Nama</string>
    <string name="kelamin">Kelamin</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="hobi">Hobi</string>
    <string name="browsing">Browsing</string>
    <string name="coding">Coding</string>
    <string name="membaca">Membaca</string>
    <string name="renang">Renang</string>
    <string name="daftar">Daftar Anggota Baru</string>
    <string name="action_settings">Settings</string>
    <string name="alamat">alamat</string>
    <string name="pekerjaan">pekerjaan</string>
    <string name="btn_forgot_password">forgot_password</string>
    <string name="lbl_forgot_password">lbl forgot password</string>
    <string name="forgot_password_msg">forgot_password</string>
    <string name="btn_back">btn_back</string>

</resources>
